PT #157490482: User message area PT #157490436: Screen Sizing PT #157601406: Page Headers PT #157569686: Covariate height allows decimal values which makes entire map disappear with no errors. PT #157663939: Certain characters in Map name keep map from displaying on Covariate page. PT #157569135: Duplicating gap values causes the gap size to be displayed multiple times. PT #157634878: Covariate Builder Page Tweaks PT #157775097: Formatting Screen - Gap location panels not toggling correctly PT #157788089: Using the apply button on the Format screen does not apply label abbreviation changes in the right side map view panel PT #157823316: Set minimum size for data entry panel on left side of all builder screens. PT #157645629: Format Page - Tweaks PT #157723153: Mechanism to "bubble-up" builder errors to the GUI Builder application.

--- a/NGCHM_GUI_Builder/WebContent/css/NGCHM_GUI.css
+++ b/NGCHM_GUI_Builder/WebContent/css/NGCHM_GUI.css
@@ -112,14 +112,16 @@ div.serviceHeaderLogo img
 
 #matrix {
     height: 100%;
-    width: 95%;
+    width: 100%;
+    overflow: hidden;
 }
 
 #matrixDisplay {
     height: 80%;
     width: 100%;
-    background-color: lightgrey;
-    overflow-y: scroll;
+    background-color: white;
+    overflow-y: auto;
+    overflow-x: auto;
 }
 
 #example table {
@@ -235,7 +237,7 @@ div.serviceHeaderLogo img
 .data_entry_container {
     min-height: 50px;
     max-height: 100%;
-    min-width: 120px;
+    min-width: 280px;
     vertical-align:top;
     margin-left: 3px;
     display:inline-block;
@@ -261,7 +263,7 @@ div.serviceHeaderLogo img
 .next_btn {
      position: fixed;
      bottom: 10px;
-     left:  18%;
+     left:  210px;
      padding: 0px 0px 5px 10px !important;
 }
 
